--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -3,21 +3,21 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
-  }
+    background-color: rgb(255, 255, 255);
+}
   
-  li {
+li {
     float: left;
-  }
+}
   
-  li a {
+li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 15px;
     text-decoration: none;
-  }
+}
   
-  li a:hover {
-    background-color: #111;
-  }
+li a:hover {
+    background-color: rgb(236, 167, 220);
+}
