--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -24,16 +24,12 @@ li a:hover {
 
 }
 * {box-sizing: border-box;}
-body {font-family: Verdana, sans-serif;}
 .mySlides {display: none; max-width: 100%;}
 img {vertical-align: middle;}
 .slideshow-container {
-  max-width: 1000px;
+  max-width: 100%;
   position: relative;
   margin: auto;
-}
-.active {
-  background-color: #717171;
 }
 .fade {
   -webkit-animation-name: fade;
