--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -21,9 +21,10 @@ li a {
 li a:hover {
     background-color: rgb(236, 167, 220);
 }
-.menu {max-width: 12vw;}
+.menu{max-width: 12vw;}
+.lista{max-height: 12vh;}
 .mySlides{display: none; max-width: 100%;}
-.texty{max-width: 100%;}
+.texty{max-width: 100%;max-height: 120%}
 img {vertical-align: middle;}
 .slideshow-container {
   max-width: 100%;
