--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -44,3 +44,12 @@ img {vertical-align: middle;}
   to {opacity: 1}
 }
 @media only screen and (max-width: 300px) {}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
+}
