--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -50,7 +50,7 @@ img {vertical-align: middle;}
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: red;
-  color: white;
+  background-color:white;
+  color: black;
   text-align: center;
 }
