--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -49,8 +49,7 @@ img {vertical-align: middle;}
   position: fixed;
   left: 0;
   bottom: 0;
-  width: 100%;
+  height: 10vh;
+  max-width: 100%;
   background-color:white;
-  color: black;
-  text-align: center;
 }
