--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -50,6 +50,6 @@ img {vertical-align: middle;}
   left: 0;
   bottom: 0;
   height: 10vh;
-  max-width: 100%;
+  width: 100%;
   background-color:white;
-}
+  }
