--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -25,6 +25,7 @@ li a:hover {
 .lista{max-height: 12vh;}
 .mySlides{display: none; max-width: 100%;}
 .texty{max-width: 100%;max-height: 120%}
+.foot{max-width: 100%;}
 img {vertical-align: middle;}
 .slideshow-container {
   max-width: 100%;
